# graph-cut-ransac

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  GraphCutRANSAC.sln  LICENSE  README.md  VisionFrameWork.sln  pyproject.toml  setup.py
.github/workflows/: build-and-deploy.yml  build-docker-image.yml
GraphCutRANSAC/: 5point.cpp  GCRANSAC.h  GCoptimization.cpp  GraphCutRANSAC.vcxproj  GraphCutRANSAC.vcxproj.filters  VideoMultiMotion.cpp  essential_estimator.cpp  fundamental_estimator.cpp  graph.h  inline_support.h  line_estimator.cpp  main.cpp  prosac_sampler.h  resource.h  sample_consensus_estimator.h  sampler.h  stdafx.h
GraphCutRANSAC/results/Kyoto/: Kyoto_points_with_no_annotation.txt  result_Kyoto.txt
GraphCutRANSAC/results/head/: head_points_with_no_annotation.txt  result_head.txt
GraphCutRANSAC/results/johnssona/: johnssona_points_with_no_annotation.txt  result_johnssona.txt
VisionFrameWork/: 5point.cpp  AsiftDetector.cpp  AsiftDetector.h  EllipticASiftDetector.cpp  EllipticASiftDetector.h  EllipticKeyPoint.cpp  EllipticKeyPoint.h  GCRANSAC.cpp  GCRANSAC.h  GCoptimization.cpp  HessianAffineDetector.cpp  HessianAffineDetector.h  MeanShiftMultiHAF.cpp  MeanShiftMultiHAF.h  MultiHAF.cpp  MultiHAF.h  MultipleHomographies.cpp  MultipleHomographies.h  Polynomial.h  Regression.cpp  Regression.h  Rpoly.cpp  Utilities.hpp  VideoMultiMotion.h  VisionFrameWork.cpp  VisionFrameWork.rc  VisionFrameWork.vcxproj  VisionFrameWork.vcxproj.filters  affine.cpp  affine.h  essential_estimator.cpp  estimator.h  evsac_sampler.h  fundamental_estimator.cpp  gc_ransac.cpp  gc_ransac.h  helpers.cpp  helpers.h  homography_estimator.cpp  line_estimator.cpp  (+12 more)
VisionFrameWork/data/fountainp11/: 0000.P  0001.P  0002.P
VisionFrameWork/data/fundamental_matrix/: Brussels_pts.txt  Brussels_vpts.mat  Dresden_pts.txt  Dresden_vpts.mat  Kyoto_model.txt  Kyoto_pts.txt  Kyoto_vpts.mat  Leuven1_pts.txt
VisionFrameWork/results/head/: head_points_with_no_annotation.txt  result_head.txt
VisionFrameWork/six_point_algorithm/: Ematrix_6pt.cc  hidden6.h  polydet.cc  polyquotient.cc  sturm.cc
VisionFrameWork/x64/Release/VisionFrameWork.tlog/: CL.command.1.tlog
data/fountain/: fountain1.K
data/pose6dscene/: pose6dscene_gt.txt  pose6dscene_points.txt
docker/: Dockerfile  README.md  install-opencv-3.4.5-in-centos-7.sh
examples/: ac_detection_for_acp1p.ipynb  cpp_example.cpp  example.ipynb  example_absolute_pose.ipynb  example_essential_matrix.ipynb  example_essential_matrix_affine_correspondence.ipynb  example_essential_matrix_sift_correspondence.ipynb  example_fundamental_matrix.ipynb  example_fundamental_matrix_affine_correspondence.ipynb  example_fundamental_matrix_sift_correspondence.ipynb  example_gravity_essential_matrix.ipynb  example_homography.ipynb  example_homography_affine_correspondence.ipynb  example_homography_sift_correspondence.ipynb  example_planar_essential_matrix.ipynb  example_pnp.ipynb  example_rigid_transform.ipynb  example_samplers.ipynb  gcransac_parameter_types.py
examples/.ipynb_checkpoints/: example-checkpoint.ipynb
examples/img/: graf_model.txt  pose6dscene_gt.txt  pose6dscene_points.txt
include/: GCRANSAC.h  essential_estimator.h  estimator.h  flann_neighborhood_graph.h  fundamental_estimator.h  grid_neighborhood_graph.h  homography_estimator.h  model.h  neighborhood_graph.h  progressive_napsac_sampler.h  prosac_sampler.h  sample_consensus_estimator.h  sampler.h  scoring_function.h  solver_engine.h  solver_essential_matrix_five_point_stewenius.h  solver_fundamental_matrix_eight_point.h  solver_fundamental_matrix_seven_point.h  solver_homography_four_point.h  types.h  uniform_random_generator.h  uniform_sampler.h  utils.h
include/GraphCut_RANSAC/: GCRANSAC.h  energy.h  estimator.h  prosac.h  prosac_sampler.h  quality_measurement.h  sample_consensus_estimator.h  sampler.h  uniform_random_generator.h
scripts/: build-eigen3.ps1  build-opencv.ps1
src/: essential_estimator.h  fundamental_estimator.h  homography_estimator.h  main.cpp
src/GraphCut_RANSAC/: GCoptimization.cpp
src/Sample/: fundamental_estimator.h  homography_estimator.h  line_estimator.h  main.cpp
src/Sample/five_point/: Polynomial.h
src/Sample_FundamentalEstimator/: essential_estimator.h  fundamental_estimator.h  homography_estimator.h  line_estimator.h  main.cpp
src/Sample_FundamentalEstimator/five_point/: 5point.cpp  5point.h  Mblock.h  Rpoly.cpp  Rpoly.h
src/five_point/: 5point.cpp
src/pygcransac/: README.md  __init__.py
src/pygcransac.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pygcransac/include/: GCRANSAC.h  block.h  data_utils.h  essential_estimator.h  estimator.h  flann_neighborhood_graph.h  fundamental_estimator.h  gamma_values.cpp  gcransac_python.h  grid_neighborhood_graph.h  homography_estimator.h  linear_model_estimator.h  math_utils.h  model.h  perspective_n_point_estimator.h  pose_utils.h  preemption_sprt.h  progressive_napsac_sampler.h  prosac_sampler.h  sampler.h  scoring_function.h  settings.h  solver_dls_pnp.h  solver_engine.h  solver_epnp_lm.h  solver_essential_matrix_five_point_stewenius.h  solver_fundamental_matrix_eight_point.h  solver_fundamental_matrix_plane_and_parallax.h  solver_fundamental_matrix_seven_point.h  solver_homography_four_point.h  solver_linear_model.h  solver_p3p.h  solver_rigid_transformation_svd.h  statistics.h  sturm8.h  types.h  uniform_random_generator.h  uniform_sampler.h  utils.h
src/pygcransac/include/estimators/: ellipse_estimator.h  essential_estimator.h  estimator.h  fundamental_estimator.h  homography_affine_correspondence_estimator.h  homography_estimator.h  linear_model_estimator.h  perspective_n_point_estimator.h  radial_homography_estimator.h  rigid_transformation_estimator.h  solver_acp1p.h  solver_acp1p_cayley.h  solver_acp1p_query.h  solver_dls_pnp.h  (+37 more)
src/pygcransac/src/: bindings.cpp  gcransac_python.cpp
tests/: test_essential_matrix.py  test_fundamental_matrix.py  test_gravity_essential_matrix.py  test_homography.py  test_planar_essential_matrix.py  test_rigid_transform.py  test_utils.py
(+26 files in other folders)
